syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartfire.smarthome";


service SmartFire {
    rpc switchOn(SwitchStatus) returns (SwitchStatus) {}
    rpc switchOff(SwitchStatus) returns (SwitchStatus) {}
    rpc fireOn(FireStatus) returns (FireStatus) {}
    rpc fireOff(FireStatus) returns (FireStatus) {}
    rpc temprature(TempratureRequest) returns (stream TempratureResponse) {}
}

message SwitchStatus{
  bool switchOnOff= 1;
}

message FireStatus{
  bool lightsOnOff= 2;
  string statusMsg = 3;
}

message TempratureRequest{
  int32 temprature= 4;
  string statusMsg = 5;
}

message TempratureResponse{
  int32 temprature= 6;
  string statusMsg = 7;
}